# kibana-tools

./: LICENSE  README.md  kibana-tools.cabal
src/: KibanaTools.hs
