name:                kibana-tools
version:             0.1.0.0
synopsis:            Simple Kibana cli
description:         See README.md
homepage:            https://github.com/lawrencejones/kibana-tools#readme
license:             MIT
license-file:        LICENSE
author:              Lawrence Jones
maintainer:          lawrjone@gmail.com
copyright:           2017 Lawrence Jones
category:            CLI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lawrencejones/kibana-tools

executable kibana-tools
  hs-source-dirs:      src
  main-is:             KibanaTools.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vector
                     , options
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , wreq
                     , lens
                     , lens-aeson
                     , containers
                     , text
                     , monad-loops
  default-language:    Haskell2010

test-suite kibana-tools-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , kibana-tools
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
